[package]
name = "Cycles"
version = "0.1.0"
authors = ["Perjoratic <perjoratic@protonmail.com>"]
edition = "2018"

[dependencies]
gdk = "0.13"
gtk = "0.9"
sled = "0.34"
relm = "0.21"
relm-derive = "0.21"
serde_cbor = "0.11"
tracing = "0.1"
libhandy = "*"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
